RESULTS/AutoSpec/raw_results/out-4o-oopsla/045_0014/045_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/045_0014/045_merged.c:69:5: error: unterminated comment
   69 |     /*@;
      |     ^
